# mapache-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs-site/: quickstart.html  troubleshooting.html
docs-site/assets/: styles.css
docs-site/examples/: k8s-monitoring-session.html  minimal-agent.html  orchestrator-pattern.html
docs-site/reference/: cli.html  makefile-format.html
docs-site/workflows/: interactive-shell.html  project-settings.html  single-prompt.html  specialist-agents.html
examples/file-edit/: skill.md  skill.py
examples/file-explorer/: skill.md  skill.py
mapache_agent/: __init__.py  agent.py  agent_shell.py  app_dirs.py  commands.py  main.py  memory.py  settings.py  skill.py  skill_registry.py
mapache_agent/builtin_tools/: __init__.py  memory_tools.py  skill_tools.py
mapache_agent/templates/: SYSTEM.md  orchestra.mk
tests/: conftest.py  test_agent.py  test_app_dirs.py  test_builtin_tools.py  test_commands.py  test_e2e_smoke.py  test_main.py  test_memory.py  test_settings.py  test_skill_decorator.py  test_skill_registry.py
